# Meta---Openenv

./: .gitignore  Dockerfile  README.md  app.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
